global/css/root.css
:root {
  --background: #141414;
  --font: #fff;
  --desc: #c9c9c9;
  --bright: #666666;
  --dim-brighter: #3d3d3d;
  --dim-bright: #272727;
  --dim: #1c1c1c;
  --lock: #fff;
  --close-button: #8d1d19;
  --font-family: 'Poppins', sans-serif;
}

* {
  caret-color: transparent;
}

a:link,
a:visited,
a:hover,
a:active {
  color: var(--font);
  text-decoration: none;
}

body {
  margin: 0;
  color: var(--font);
  background-color: var(--background);
  font-family: "Google";
  width: 100%;
}

html {
  scroll-behavior: smooth;
}

